force-app/main/default/objects/Contact_Badge_Definition__mdt/Contact_Badge_Definition__mdt.object-meta.xml
<CustomObject>
    <description>Used to define criteria for and appearance of Contact Badges</description>
    <label>Contact Badge Definition</label>
    <pluralLabel>Contact Badge Definitions</pluralLabel>
</CustomObject>