force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, a pop-up alert will display to the user on page load</description>
    <inlineHelpText>If true, a pop-up alert will display to the user on page load</inlineHelpText>
    <label>Alert</label>
    <type>Checkbox</type>
</CustomField>