force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>Alert_Message__c</fullName>
    <description>When Alert equals true, this message displays in the pop-up window on page load. Use {!My_Custom_Field__c} syntax to display merged values</description>
    <inlineHelpText>When Alert equals true, this message displays in the pop-up window on page load. Use {!My_Custom_Field__c} syntax to display merged values</inlineHelpText>
    <label>Alert Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>