force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Color__c</fullName>
    <description>Hexadecimal color code for the badge background</description>
    <inlineHelpText>Hexadecimal color code for the badge background</inlineHelpText>
    <label>Background Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>