force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Badge_Label_Type__c.field-meta.xml
<CustomField>
    <fullName>Badge_Label_Type__c</fullName>
    <description>Used to determine whether the badge label will be populated from the value of a specified SObject field (Field Reference) or a defined value on the Contact Badge Definition (Label Value)</description>
    <inlineHelpText>Used to determine whether the badge label will be populated from the value of a specified SObject field (Field Reference) or a defined value on the Contact Badge Definition (Label Value)</inlineHelpText>
    <label>Badge Label Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Reference</fullName>
                <default>true</default>
                <label>Field Reference</label>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>