force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Label_Field_Reference__c.field-meta.xml
<CustomField>
    <fullName>Label_Field_Reference__c</fullName>
    <description>If Badge Label Type is set to &apos;Field Reference&apos;, enter the API Name of the field on the target object to reference for the badge label.</description>
    <inlineHelpText>If Badge Label Type is set to &apos;Field Reference&apos;, enter the API Name of the field on the target object to reference for the badge label.</inlineHelpText>
    <label>Label Field Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>