force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Label_Value__c.field-meta.xml
<CustomField>
    <fullName>Label_Value__c</fullName>
    <description>If Badge Label Type is set to &apos;Label Value&apos;, use this field to define the label for all records returned by this Contact Badge Definition. Use {!My_Custom_Field__c} syntax to display merged values</description>
    <inlineHelpText>If Badge Label Type is set to &apos;Label Value&apos;, use this field to define the label for all records returned by this Contact Badge Definition. Use {!My_Custom_Field__c} syntax to display merged values</inlineHelpText>
    <label>Label Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>