force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>The API name of the SObject type that these badges are based on</description>
    <inlineHelpText>The API name of the SObject type that these badges are based on</inlineHelpText>
    <label>Object Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>