force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Order_By__c.field-meta.xml
<CustomField>
    <fullName>Order_By__c</fullName>
    <description>Optionally, define order in which badges are displayed (e.g. My_Custom_Field__c ASC)</description>
    <inlineHelpText>Optionally, define order in which badges are displayed (e.g. My_Custom_Field__c ASC)</inlineHelpText>
    <label>Order By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>