force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Related_Object_ID_Path__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_ID_Path__c</fullName>
    <description>The API name of the path to the Contact or Account ID (e.g. ContactId, AccountId, My_Custom_Contact_Lookup__c, My_Custom_Contact_Lookup__r.AccountId)</description>
    <inlineHelpText>The API name of the path to the Contact or Account ID (e.g. ContactId, AccountId, My_Custom_Contact_Lookup__c, My_Custom_Contact_Lookup__r.AccountId)</inlineHelpText>
    <label>Related Object ID Path</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>