force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Related_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Type__c</fullName>
    <defaultValue>&quot;Contact&quot;</defaultValue>
    <description>Determines whether to return records related to the Contact or Account</description>
    <inlineHelpText>Determines whether to return records related to the Contact or Account</inlineHelpText>
    <label>Related Object Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>