force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Sample__c.field-meta.xml
<CustomField>
    <fullName>Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not delete. Used in test scenarios.</description>
    <label>Sample</label>
    <type>Checkbox</type>
</CustomField>