force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Type__c</fullName>
    <description>The SObject type that these badges are based on</description>
    <inlineHelpText>The SObject type that these badges are based on</inlineHelpText>
    <label>SObject Type</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Contact_Badge_Definitions</relationshipLabel>
    <relationshipName>Contact_Badge_Definitions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>