force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Determines the order in which badges of this type will appear. Positive integers between 1 and 100; lowest sort order will appear first.</description>
    <inlineHelpText>Determines the order in which badges of this type will appear. Positive integers between 1 and 100; lowest sort order will appear first.</inlineHelpText>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>