force-app/main/default/objects/Contact_Badge_Definition__mdt/validationRules/Alert_Must_Have_A_Message.validationRule-meta.xml
<ValidationRule>
    <fullName>Alert_Must_Have_A_Message</fullName>
    <active>true</active>
    <description>If Alert equals true, an Alert Message must be defined</description>
    <errorConditionFormula>AND(
 Alert__c ,
 ISBLANK( Alert_Message__c )
)</errorConditionFormula>
    <errorDisplayField>Alert_Message__c</errorDisplayField>
    <errorMessage>If Alert equals true, an Alert Message must be defined</errorMessage>
</ValidationRule>