force-app/main/default/objects/Contact_Badge_Definition__mdt/listViews/Active_Definitions.listView-meta.xml
<ListView>
    <fullName>Active_Definitions</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Object_Type__c</columns>
    <columns>Background_Color__c</columns>
    <columns>Alert__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Definitions</label>
    <language>en_US</language>
</ListView>